asn1decoder flows updated with new configuration objects