@@ -9,6 +9,7 @@ import org.springframework.boot.test.context.ConfigDataApplicationContextInitial
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import us.dot.its.jpo.ode.OdeProperties;
+import us.dot.its.jpo.ode.kafka.Asn1CoderTopics;
 import us.dot.its.jpo.ode.kafka.OdeKafkaProperties;
 import us.dot.its.jpo.ode.model.Asn1Encoding.EncodingRule;
 import us.dot.its.jpo.ode.model.OdeAsn1Data;
@@ -26,25 +27,21 @@ class Asn1DecodeSSMJSONTest {
     @Autowired
     OdeKafkaProperties odeKafkaProperties;
 
-    @Test
-    void testConstructor() {
-        OdeProperties properties = new OdeProperties();
-        assertEquals("topic.OdeRawEncodedSSMJson", properties.getKafkaTopicOdeRawEncodedSSMJson());
-    }
+    @Autowired
+    Asn1CoderTopics asn1CoderTopics;
 
     @Test
     void testProcess() throws JSONException {
-        OdeProperties properties = new OdeProperties();
-        Asn1DecodeSSMJSON testDecodeSsmJson = new Asn1DecodeSSMJSON(properties, odeKafkaProperties);
+        Asn1DecodeSSMJSON testDecodeSsmJson = new Asn1DecodeSSMJSON(odeKafkaProperties, asn1CoderTopics.getDecoderInput());
 
         OdeAsn1Data resultOdeObj = testDecodeSsmJson.process(json);
 
         // Validate the metadata
         OdeSsmMetadata jsonMetadataObj = (OdeSsmMetadata) resultOdeObj.getMetadata();
         assertEquals(OdeSsmMetadata.SsmSource.RSU, jsonMetadataObj.getSsmSource());
-        assertEquals("unsecuredData", jsonMetadataObj.getEncodings().get(0).getElementName());
-        assertEquals("MessageFrame", jsonMetadataObj.getEncodings().get(0).getElementType());
-        assertEquals(EncodingRule.UPER, jsonMetadataObj.getEncodings().get(0).getEncodingRule());
+        assertEquals("unsecuredData", jsonMetadataObj.getEncodings().getFirst().getElementName());
+        assertEquals("MessageFrame", jsonMetadataObj.getEncodings().getFirst().getElementType());
+        assertEquals(EncodingRule.UPER, jsonMetadataObj.getEncodings().getFirst().getEncodingRule());
 
         // Validate the payload
         String expectedPayload = "{\"bytes\":\"001E120000000005E9C04071A26614C06000040BA000\"}";
